# parcus

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: RESULTS.md  samples.jsonl  stress_test.py
docs/: faq.md  guide.md  technical-reference.md
docs/adr/: 0001-proxy-architecture-and-fail-open.md  0002-graph-memory.md  0003-multi-tenancy.md  0004-similarity-cache.md  0005-at-rest-cache-encryption.md  0006-tier2-learned-compressor.md  0007-per-tenant-deks-crypto-shredding.md  0008-kms-backed-master-key.md  0009-monotonic-key-epoch.md  0010-gemini-context-cache-adapter.md  0011-query-aware-extractive-compression.md
docs/design/: structured-content-parser.md  token-reduction-frontier.md  token-reduction-roadmap.md
docs/security/: threat-model.md
docs/validation/: RESULTS.md
qa/cache-inject/: .gitignore  README.md  validate.py
qa/dast/: .gitignore  README.md  run.sh  zap-baseline.conf
qa/eval/: .gitignore  README.md  build_dataset.py  promptfooconfig.yaml
qa/fuzz/: .gitignore  README.md  fuzz_parsers.py  mock_upstream.py  openapi.yaml  run.sh  run_atheris.sh
qa/judge/: README.md  RESULTS.md  build_cases.py  cases.json  score.py  verdicts.json
qa/load/: .gitignore  README.md  load_test.js  mock_upstream.py  run.sh
scripts/: check_links.py
src/parcus/: __init__.py  cli.py  invariants.py  model.py  ports.py  quota.py  spans.py  tenant.py  tokenize.py
src/parcus/cache/: __init__.py  clock.py  context_cache.py  encryption.py  epoch.py  key.py  null.py  policy.py  seen.py  similarity.py  similarity_store.py  sqlite_cache.py  strategy.py
src/parcus/compress/: __init__.py  chain.py  dedup.py  elision.py  filler.py  learned.py  lossless.py  null.py
src/parcus/config/: __init__.py  settings.py
src/parcus/eval/: __init__.py  dataset.py  equivalence.py  judged.py  metrics.py  quality.py  retrieval.py  runner.py  samples.py  similarity.py
src/parcus/memory/: __init__.py  compaction.py  embedding.py  graph.py  ingest.py  model.py  provider.py  retrieval.py  sqlite_store.py  store.py  summary.py
src/parcus/obs/: __init__.py  events.py  prometheus.py  sinks.py  store.py
src/parcus/proxy/: __init__.py  app.py  dialects.py  engine.py  upstream.py  usage.py
src/parcus/redact/: __init__.py  redactor.py
src/parsimony/: __init__.py  cli.py  invariants.py  model.py  ports.py  spans.py  tenant.py  tokenize.py
src/parsimony/cache/: __init__.py  clock.py  encryption.py  key.py  null.py  policy.py  similarity.py  sqlite_cache.py
src/parsimony/compress/: __init__.py  chain.py  filler.py  learned.py  lossless.py  null.py  sampling.py
src/parsimony/config/: __init__.py  settings.py
src/parsimony/eval/: __init__.py  dataset.py  equivalence.py  retrieval.py  runner.py  samples.py  similarity.py
src/parsimony/memory/: __init__.py  compaction.py  embedding.py  graph.py  ingest.py  provider.py  retrieval.py  sqlite_store.py  store.py  terms.py
src/parsimony/obs/: __init__.py  events.py  prometheus.py  report.py  sinks.py  store.py
src/parsimony/proxy/: __init__.py  app.py  dialects.py  engine.py  upstream.py
src/parsimony/redact/: __init__.py  patterns.py  redactor.py
tests/integration/: test_concurrency.py  test_credential_safety.py  test_fail_open.py  test_proxy_app.py  test_stats_endpoint.py  test_stream_fidelity.py
tests/property/: test_compression_invariants.py
tests/unit/: test_cache_encryption.py  test_cache_epoch.py  test_cache_key.py  test_cache_policy.py  test_cache_strategy.py  test_chain.py  test_cli.py  test_compaction.py  test_context_cache.py  test_dedup.py  test_dialects.py  test_elision.py  test_embedding.py  test_engine.py  test_engine_memory.py  test_eval_dataset.py  test_eval_equivalence.py  test_eval_judged.py  test_eval_metrics.py  test_eval_retrieval.py  test_eval_runner.py  test_eval_similarity.py  test_filler.py  test_filler_equivalence.py  test_learned.py  test_lossless.py  test_m5_ops.py  test_memory.py  test_memory_provider.py  test_memory_sqlite.py  test_metrics_store.py  test_model.py  test_null_adapters.py  test_obs.py  test_pipeline_metrics.py  test_prefix_seen.py  test_quality.py  test_quota.py  test_redactor.py  test_settings.py  (+11 more)
