[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parsimony"
version = "0.1.0"
description = "Local-first, token-thrift inference proxy for agentic harnesses."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "0xb007ab1e", email = "134006168+0xb007ab1e@users.noreply.github.com" }]
keywords = ["llm", "proxy", "tokens", "compression", "cache", "agentic"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
  "Private :: Do Not Upload",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
# Optional LOCAL models — lazy, opt-in; never required for core operation.
learned = ["llmlingua>=0.2"]
graph = ["sqlite-vec>=0.1", "networkx>=3.3"]
embeddings = ["sentence-transformers>=2.7"]  # local semantic retrieval (lazy, opt-in)
encryption = ["cryptography>=42"]            # AES-256-GCM at-rest cache encryption (opt-in)
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "respx>=0.21",           # httpx mocking for upstream tests
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pdoc>=14.5",            # doc generation (mandate §1)
  "cryptography>=42",      # exercise the at-rest encryption path in tests/CI
]

[project.scripts]
parsimony = "parsimony.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/parsimony"]

# ---------------------------------------------------------------------------
# Ruff — lint + format + docstring enforcement (docs mandate §1)
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",             # isort
  "B",             # bugbear
  "D",             # pydocstyle — every public symbol documented
  "S",             # flake8-bandit (security)
  "UP",            # pyupgrade
  "ANN",           # type annotations
  "ASYNC",         # async pitfalls
  "RUF",
]
# D203/D213 conflict with the chosen convention; ANN101/102 are deprecated self/cls rules.
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests may skip docstrings and use assert; they are not a public API surface.
"tests/**" = ["D", "S101", "ANN"]

# ---------------------------------------------------------------------------
# mypy — strict typing for new code
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["src", "tests"]

# Optional extras have no type stubs; don't fail typing when they're absent.
[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "sqlite_vec.*", "llmlingua.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest + coverage gates (master §4)
#   Baseline: >=90% line AND branch repo-wide.
#   Critical paths (transform/cache-decision pipeline) enforced to 100% via a
#   separate per-module check in CI (see Makefile / CI), not this single number.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=parsimony --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["parsimony"]

[tool.coverage.report]
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
  "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
