[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parcus"
version = "0.1.0"
description = "Local-first, token-thrift inference proxy for agentic harnesses."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "0xb007ab1e", email = "134006168+0xb007ab1e@users.noreply.github.com" }]
keywords = [
  "llm",
  "proxy",
  "tokens",
  "token-optimization",
  "prompt-compression",
  "cache",
  "agentic",
  "agents",
  "anthropic",
  "openai",
  "claude",
  "llmlingua",
  "parsimony",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Internet :: Proxy Servers",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
# Optional LOCAL models — lazy, opt-in; never required for core operation.
learned = ["llmlingua>=0.2"]
graph = ["sqlite-vec>=0.1", "networkx>=3.3"]
embeddings = ["sentence-transformers>=2.7"]  # local semantic retrieval (lazy, opt-in)
encryption = ["cryptography>=42"]            # AES-256-GCM at-rest cache encryption (opt-in)
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "respx>=0.21",           # httpx mocking for upstream tests
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pdoc>=14.5",            # doc generation (mandate §1)
  "cryptography>=42",      # exercise the at-rest encryption path in tests/CI
]

[project.urls]
Homepage = "https://github.com/0xb007ab1e/parcus"
Documentation = "https://github.com/0xb007ab1e/parcus/blob/main/docs/guide.md"
Repository = "https://github.com/0xb007ab1e/parcus"
Changelog = "https://github.com/0xb007ab1e/parcus/blob/main/CHANGELOG.md"
Issues = "https://github.com/0xb007ab1e/parcus/issues"

[project.scripts]
parcus = "parcus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/parcus"]

# ---------------------------------------------------------------------------
# Ruff — lint + format + docstring enforcement (docs mandate §1)
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",             # isort
  "B",             # bugbear
  "D",             # pydocstyle — every public symbol documented
  "S",             # flake8-bandit (security)
  "UP",            # pyupgrade
  "ANN",           # type annotations
  "ASYNC",         # async pitfalls
  "RUF",
]
# D203/D213 conflict with the chosen convention; ANN101/102 are deprecated self/cls rules.
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests may skip docstrings and use assert; they are not a public API surface.
"tests/**" = ["D", "S101", "ANN"]

# ---------------------------------------------------------------------------
# mypy — strict typing for new code
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["src", "tests"]

# Optional extras have no type stubs; don't fail typing when they're absent.
[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "sqlite_vec.*", "llmlingua.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest + coverage gates (master §4)
#   Baseline: >=90% line AND branch repo-wide.
#   Critical paths (transform/cache-decision pipeline) enforced to 100% via a
#   separate per-module check in CI (see Makefile / CI), not this single number.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=parcus --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["parcus"]

[tool.coverage.report]
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
  "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]

# ---------------------------------------------------------------------------
# mutmut — mutation testing (validates the 100%-critical suite actually kills
# faults; master §4). mutmut is NOT a project dependency: run it ephemerally
# via `uvx mutmut run` or `make mutate` — nothing here is imported by the package
# or installed by CI from these deps. Scoped to the critical modules; only
# test-covered lines are mutated; coverage in addopts is cleared so a mutant's
# run isn't failed by the >=90% gate.
# ---------------------------------------------------------------------------
[tool.mutmut]
source_paths = ["src"]
# Mutate the critical modules (mirror of the make cov-critical set). Only these get mutated;
# the rest of the package is copied but left intact.
only_mutate = [
  "*parcus/compress/*.py",
  "*parcus/model.py",
  "*parcus/spans.py",
  "*parcus/cache/key.py",
  "*parcus/cache/policy.py",
  "*parcus/cache/similarity.py",
  "*parcus/cache/encryption.py",
  "*parcus/redact/*.py",
  "*parcus/invariants.py",
  "*parcus/eval/equivalence.py",
  "*parcus/eval/quality.py",
  "*parcus/memory/compaction.py",
  "*parcus/memory/provider.py",
  "*parcus/tenant.py",
  "*parcus/quota.py",
]
mutate_only_covered_lines = true
# Clear the repo addopts (--cov ... --cov-fail-under) so a mutant's test run isn't failed by the
# coverage gate; -x stops each run at the first killing test (faster).
pytest_add_cli_args = ["-x", "-q", "-o", "addopts=", "-p", "no:cacheprovider"]
